--- a/package.json
+++ b/package.json
@@ -1,8 +1,1 @@
-{
-"scripts": {
-  "test": "jest"
-},
-  "devDependencies": {
-    "jest": "^27.0.6"
-  }
-}
+{"scripts":{"test":"jest"},"devDependencies":{"@jest/globals":"^27.0.6","jest":"^27.0.6"}}
